# mwg-dmx-ipo-valuation

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  requirements-artifacts.txt  vite.config.ts
.github/workflows/: ci.yml  pages.yml
analytics/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
analytics/data/curated/: README.md
analytics/data/sample/: financial_facts_sample.csv  sotp_scenarios_sample.json  source_documents_sample.csv
analytics/sql/: schema.sql
analytics/src/mwg_dmx_analytics/: __init__.py  cli.py  constants.py  data_io.py  database.py  dmx_excel.py  pipeline.py  ratios.py  three_statement.py  types.py  validation.py  valuation.py
analytics/tests/: __init__.py  test_dmx_excel.py  test_pipeline.py  test_portfolio_provenance.py  test_ratios.py  test_three_statement.py  test_validation.py  test_valuation.py
app/: README.md  globals.css  layout.tsx  page.tsx
app/components/: ThreeStatementAnalysis.tsx  ValuationLab.tsx
app/data/: case-data.ts
data/: README.md  source_registry.csv
data/processed/: dmx_normalization_adjustments.csv  (+2 more)
docs/: README.md  data_scope.md  financial_methodology.md  model_spec.md
model/: README.md
public/: standalone-site.js  three-statement-data.js
reports/: README.md  RESEARCH_REPORT.md
scripts/: README.md  build_financial_model.py  build_reports.py  build_three_statement_analysis.py  fetch_sources.py
tests/: README.md  rendered-html.test.mjs  standalone-html.test.mjs
worker/: index.ts
(+7 files in other folders)
