[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mwg-dmx-analytics"
version = "0.2.0"
description = "Reproducible financial statement, scenario and SOTP analytics for the MWG-DMX case study"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Portfolio project contributor" }]
dependencies = []

[project.urls]
Homepage = "https://susayold.github.io/mwg-dmx-ipo-valuation/"
Repository = "https://github.com/susayold/mwg-dmx-ipo-valuation"

[project.optional-dependencies]
xlsx = ["openpyxl>=3.1,<4"]
dev = ["openpyxl>=3.1,<4", "pytest>=8", "ruff>=0.6"]

[project.scripts]
mwg-dmx-analytics = "mwg_dmx_analytics.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
